feat: use dataclass parameter files everywhere

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -1,24 +1,18 @@
 include ../../examples.mk
 
 ## samples.csv: sampled snails from survey sites
-samples.csv: genomes.csv synthesize_samples.py
-	python synthesize_samples.py \
-	--genomes genomes.csv \
-	--mutant 10.0 \
-	--normal 1.0 \
+samples.csv: genomes.json make_samples.py
+	python make_samples.py \
+	--genomes genomes.json \
 	--outfile $@ \
+	--params sample_params.json \
 	--sites sites.csv \
-	--seed 1791128 \
 	--surveys surveys.csv
 
-## genomes.csv: synthesized genomes
-genomes.csv: synthesize_genomes.py
-	python synthesize_genomes.py \
+## genomes.json: synthesized genomes
+genomes.json: make_genomes.py
+	python make_genomes.py \
 	--outfile $@ \
-	--length 40 \
-	--num_genomes 100 \
-	--num_snp 5 \
-	--prob_other 0.01 \
-	--seed 102938
+	--params genome_params.json
 
 settings: _settings
