--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,3 @@
-**/docs/*.aux
-**/docs/*.bbl
-**/docs/*.bcf
-**/docs/*.bib
-**/docs/*.blg
-**/docs/*.cls
-**/docs/*.idx
-**/docs/*.ilg
-**/docs/*.ind
-**/docs/*.log
-**/docs/*.out
-**/docs/*.pdf
-**/docs/*.run.xml
-**/docs/*.tex
-**/docs/*.toc
-**/docs/*/*.pdf
-**/src/*/*.pdf
 *.bkp
 *.db
 *.dtmp
@@ -30,4 +13,25 @@
 .ruff_cache
 \#*
 __pycache__
+data/*.csv
+data/*.json
+data/designs
+data/readings
+docs/*.aux
+docs/*.bbl
+docs/*.bcf
+docs/*.bib
+docs/*.blg
+docs/*.cls
+docs/*.idx
+docs/*.ilg
+docs/*.ind
+docs/*.log
+docs/*.out
+docs/*.pdf
+docs/*.run.xml
+docs/*.tex
+docs/*.toc
+docs/*/*.pdf
+src/*/*.pdf
 tmp
